--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.red-box{
+  width: 100%;
+  height: 110vh;
+  background-color: white;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App{
+  padding: 5vh 10%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.box-1{
+  padding: 0 290px;
 }
-
-.App-link {
-  color: #61dafb;
+.logo-container{
+  width: 112px;
+  height: 112px;
+  margin: auto;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tittle{
+  font-weight: 500;
+}
+.button-container{
+  margin: 0 -50px;
+}
+.decr{
+  font-weight: lighter;
+  font-size: 16px;
+}
+.twitter, .twitter:hover{
+  background-color: #1DA1F2;
+}
+.facebook, .facebook:hover{
+  background-color: #3B5998;
+}
+.google, .google:hover{
+  background-color: #EA4335;
+}
+.github, .github:hover{
+  background-color: #333333;
+}
+.mt{
+  margin-top: 10px;
 }
